# guardian-agent

./: .gitignore  .gitmodules  .protocol.md.swp  AUTHORS  LICENSE  Makefile.am  README.md  Untitled Diagram.xml  agent.go  common.go  configure.ac  delegated_client.go  go.mod  go.sum  guardo.md  interact.go  policy.go  protocol.md  safepath.go  scope.go  smart_options.go  sockaddr.go  socket.go  socket_windows.go  sshfwd.go  store.go  switchvt.go  syscall_info.go  syscalls.go  udslistener.go  ui.go
.github/workflows/: go.yml
cmd/guardo-agent/: guardo_agent.go
cmd/sga-guard/: sga-guard.go
cmd/sga-guard-bin/: .gitignore  sga-guard-bin.go
cmd/sga-run/: sga-run.go
cmd/sga-ssh/: sga-ssh.go
cmd/sga-stub/: sga-stub.go
cmd/ssh-fwd-stub/: ssh-fwd-stub.go
cmd/ssh-guard-agent/: ssh-guard-agent.go
continuous-auth/: auth-loop.sh  key-setup.sh  ssh-continuous-auth.sh
continuousAuth/: auth-loop.sh  conn.go  continuous-auth.go
doc/: AfterHandoff.xml  SSHLevel.xml  bad flow.vsdm  design.md  good flow with lines.vsdm  good flow.vsdm  protocol.md
gobuild/: Makefile.am
gossh/: .gitignore  build.sh  notes.txt
gossh/agent/: agent.go  tmp.txt
gossh/client/: .gitignore  client.go  delegated_client.go
gossh/common/: common.go  interact.go  prompt.go  socket.go
gossh/policy/: policy.go  scope.go  store.go
gossh/sshfwd/: .gitignore  sshfwd.go
gossh/sshfwdstub/: sshfwdstub.go
gossh/sshguard/: .gitignore  sshguard.go
gossh/store/: store.go
libaba/: Makefile.am  address.cc  address.hh  file_descriptor.cc  file_descriptor.hh  hooks.cc  ioctl_marshall.cc  ioctl_marshall.hh  marshalls.cc  marshalls.hh  sendmsg_marshall.cc  sendmsg_marshall.hh  socket.cc  socket.hh  util.cc  util.hh
proto/: Makefile.am  guardian_agent.proto  guardo.proto  syscalls.hh  syscalls.textproto
release/: .gitignore  makefile
scripts/: sga-env.sh  sga-guard
slides/: 201706 HUJI.pptx
tests/: Makefile.am  stress_open.cc
